--- a/APIs/bus-book/README
+++ b/APIs/bus-book/README
@@ -1,1 +1,9 @@
-
+-----------------------
+Discover Image Size : 
+height = 280px,
+weight = 200px,
+-----------------------
+Best Offers:
+height = 180px,
+weight = 300px
+-----------------------
