--- a/APIs/bus-book/README
+++ b/APIs/bus-book/README
@@ -3,7 +3,7 @@ Discover Image Size :
 height = 280px,
 weight = 200px,
 -----------------------
-Best Offers:
+Best Offers Size :
 height = 180px,
 weight = 300px
 -----------------------
