--- a/APIs/trains-book/README
+++ b/APIs/trains-book/README
@@ -11,3 +11,7 @@ Services Banner Size :
 height = 180px,
 weight = 360px
 -----------------------
+brand_icon size :
+height = 80px,
+weight = 80px
+-----------------------
