--- a/APIs/trains-book/README
+++ b/APIs/trains-book/README
@@ -1,9 +1,9 @@
 -----------------------
-Discover Banner Size : 
+thumbnail size : 
 height = 280px,
 weight = 200px,
 -----------------------
-Offers Banner Size :
+offers Banner Size :
 height = 180px,
 weight = 300px
 -----------------------
