--- a/APIs/trains-book/discover/README
+++ b/APIs/trains-book/discover/README
@@ -1,13 +1,14 @@
-Discover Image = 6;
-Discover Image = nullable;
+# Note Points (Read before made any changes )
+- Discover Image = 6;
+- Discover Image = nullable;
+- Right method example = https://res.cloudinary.com/trendbrains/image/upload/r_14/v1628488272/Bus_Book/example.png
+- Don't use = https://res.cloudinary.com/trendbrains/image/upload/c_scale,h_200,r_14,w_320/v1628488272/Bus_Book/example.png
+- Change size on figma and upload in cloudinary
 
-thumbnail size:- 
+thumbnail size:
 height - 280px
 weight - 200 px
-example = https://res.cloudinary.com/trendbrains/image/upload/c_scale,h_280,r_14,w_200/v1628488272/Bus_Book/example.png
 
 images_one & images_two size:-
 height - 200px
-weight - 320 px
-example = https://res.cloudinary.com/trendbrains/image/upload/c_scale,h_200,r_14,w_320/v1628488272/Bus_Book/example.png
-
+weight - 320px
