--- a/APIs/trains-book/discover/README
+++ b/APIs/trains-book/discover/README
@@ -4,6 +4,7 @@
 - Right method example = https://res.cloudinary.com/trendbrains/image/upload/r_14/v1628488272/Bus_Book/example.png
 - Don't use = https://res.cloudinary.com/trendbrains/image/upload/c_scale,h_200,r_14,w_320/v1628488272/Bus_Book/example.png
 - Change size on figma and upload in cloudinary
+- Change only mad using https://codebeautify.org/jsonviewer
 
 thumbnail size:
 height - 280px
