--- a/APIs/trains-book/services/README
+++ b/APIs/trains-book/services/README
@@ -1,2 +1,4 @@
 Trains = https://developers.trendbrains.com/APIs/trains-book/services/trains-service.json
-Bus = Trains = https://developers.trendbrains.com/APIs/trains-book/services/cabs-service.json
+Bus = https://developers.trendbrains.com/APIs/trains-book/services/cabs-service.json
+Hotels = https://developers.trendbrains.com/APIs/trains-book/services/hotels-service.json
+Packages = https://developers.trendbrains.com/APIs/trains-book/services/packages-service.json
