--- a/APIs/trains-book/discover/README
+++ b/APIs/trains-book/discover/README
@@ -1,4 +1,5 @@
-Offers - https://developers.trendbrains.com/APIs/trains-book/discover/discover.json
+Open - https://developers.trendbrains.com/APIs/trains-book/discover/discover.json
+
 # Note Point (Read Carefully)
 1. Max No. of discover Images = 6;
 - Discover Images = nullable;
