--- a/APIs/trains-book/discover/README
+++ b/APIs/trains-book/discover/README
@@ -2,11 +2,11 @@ Open - https://developers.trendbrains.com/APIs/trains-book/discover/discover.jso
 
 # Note Point (Read Carefully)
 1. Max No. of discover Images = 6;
-- Discover Images = nullable;
-- Right method example = https://res.cloudinary.com/trendbrains/image/upload/r_14/v1628488272/Bus_Book/example.png
-- Don't use = https://res.cloudinary.com/trendbrains/image/upload/c_scale,h_200,r_14,w_320/v1628488272/Bus_Book/example.png
-- Change size on figma and upload in cloudinary
-- Change only made using https://codebeautify.org/jsonviewer
+2. Discover Images = nullable;
+3. Right method example = https://res.cloudinary.com/trendbrains/image/upload/r_14/v1628488272/Bus_Book/example.png
+4. Don't use = https://res.cloudinary.com/trendbrains/image/upload/c_scale,h_200,r_14,w_320/v1628488272/Bus_Book/example.png
+5. Change size on figma and upload in cloudinary
+6. Change only made using https://codebeautify.org/jsonviewer
 
 thumbnail size:
 height - 280px
