--- a/APIs/trains-book/offers/README
+++ b/APIs/trains-book/offers/README
@@ -1,3 +1,5 @@
+Open- https://developers.trendbrains.com/APIs/trains-book/offers/offers.json
+
 # Note Point (Read Carefully)
 1. No. of offers banner = 6;
 2. Offers banner = nullable;
